# LaMP

./: .gitignore  Dockerfile  docker-compose.yml  eda_merge_with_rank.py  eda_preprocess.py  hello.py  nohup.out  pyproject.toml  run.sh  run_lamp_merge_with_rank.sh  run_train_llm_lamp.sh
LaMP/: Dockerfile  docker-compose.yml  preprocess.sh  rank_profiles.py  run_lamp_merge_with_rank.sh  run_train_llm_lamp.sh  train_llm.py
LaMP/data/: datasets.py
LaMP/prompts/: prompts.py
LaMP/utils/: merge_with_rank.py
