[project]
name = "lamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "evaluate>=0.4.3",
    "marimo>=0.11.24",
    "rank-bm25>=0.2.2",
    "sacrebleu>=2.5.1",
    "torch>=2.6.0",
    "transformers>=4.49.0",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
]
