[project]
name = "lamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.6.0",
    "evaluate>=0.4.3",
    "marimo>=0.11.24",
    "nltk>=3.9.1",
    "rank-bm25>=0.2.2",
    "rouge-score>=0.1.2",
    "sacrebleu>=2.5.1",
    "torch>=2.6.0",
    "transformers>=4.49.0",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
]
